# aleva

./: README.md  pyproject.toml
scripts/: compile_translations.py  run.py
src/aleva/: __main__.py  main_window.py
src/aleva/languages/: aleva_en.qm  aleva_en.ts  aleva_ja.qm  aleva_ja.ts  aleva_zh.qm  aleva_zh.ts
