[project]
name = "aleva"
version = "0.1.0"
description = ""
authors = [
    {name = "Wensheng Wang",email = "wenshengwang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "onnxruntime (>=1.22.0,<2.0.0)",
    "openwakeword (>=0.6.0,<0.7.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "PySide6>=6.5.0",
    "pywin32 (>=310,<311) ; sys_platform == \"windows\"",
    "sounddevice>=0.4.6",
    "vosk (>=0.3.45,<0.4.0)"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.poetry]
packages = [{include = "aleva", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = "sounddevice"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "broad-except",
]

[tool.pylint.format]
max-line-length = 120
